user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-service
    spec:
      # serviceAccountName: gr18
      # imagePullSecrets:
      #   - name: ecr-credentials
      containers:
        - name: user-service
          image: public.ecr.aws/n4s8c1b7/user-service:3 # {"$imagepolicy": "microservices:user-service-policy"}
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: "200m"
              memory: 500Mi
          ports:
            - containerPort: 3001
          command: ["/bin/sh", "-c"]
          args: ["npm run start"]
      restartPolicy: Always
