user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - name: user-service
      protocol: TCP
      port: 80
      targetPort: 3001
