user-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  labels:
    name: user-service
  annotations:
    nginx.ingress.kubernetes.io/client-max-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/limit-rps: "100"

spec:
  ingressClassName: nginx
  rules:
  - host: game-store.com
    http:
      paths:
      - path: "/user/(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 80
